test/fail/exceptions/excep_in_anonymous.lly
#[
BadTypecastError: Cannot cast any containing type 'integer' to type 'string'.
Traceback:
    File "excep_in_anonymous.lly", from f at line 10
    File "excep_in_anonymous.lly", from __main__ at line 14
]#

define f() {
    var a: any = 10
    var s = a.@(string)
}

var function_list: list[function()] = [f, f, f]
function_list[0]()
